[package]
name = "launchpad-guaranteed-tickets-v2-meta"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.com>"]
edition = "2021"
publish = false

[dependencies.launchpad-guaranteed-tickets-v2]
path = ".."

[dependencies.dharitri-sc]
version = "0.54.2"

[dependencies.dharitri-sc-meta-lib]
version = "0.54.2"
