[package]
name = "launchpad-guaranteed-tickets-meta"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"
publish = false

[dependencies.launchpad-guaranteed-tickets]
path = ".."

[dependencies.dharitri-sc]
version = "0.54.2"

[dependencies.dharitri-sc-meta-lib]
version = "0.54.2"
