[package]
name = "launchpad-locked-tokens-meta"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"
publish = false

[dependencies.launchpad-locked-tokens]
path = ".."

[dependencies.dharitri-sc]
version = "0.54.2"

[dependencies.dharitri-sc-meta-lib]
version = "0.54.2"
